tools/vendor/datatest-stable/tests/compile-fail/missing-root-comma.rs
datatest_stable::harness! {
    {
        test = my_test,
        pattern = r"^.*(?<!\.skip)\.txt$",
    },
}
